PROJECT(deadbeef_thbgm)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_SHARED_LIBRARY_PREFIX "")

SET(SOURCE_FILES
	thbgm.cc
	../thxmlparser.cc
)

INCLUDE_DIRECTORIES(
	../
)

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})

ADD_LIBRARY(thbgm SHARED ${SOURCE_FILES})

INSTALL(TARGETS thbgm
	LIBRARY DESTINATION /usr/lib/deadbeef/
)
